k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scores-service
spec:
  selector:
    app: scores
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
